# ssh-port-forwarder

./: .gitignore  LICENSE  README.md  Taskfile.yml  builddmg.sh  main.py  main.spec  pyproject.toml
.github/workflows/: release.yml
img/: icon.icns
ssh_port_forwarder/: app_dir.py  db.py  models.py  services.py  tunnel.py
ssh_port_forwarder/desktop/: connection_dialog.py  connection_item.py  connection_service.py  input_field.py  label.py  main_window.py
